--- a/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
@@ -29,7 +29,7 @@
         <i class="fas fa-cog"></i>
         <span>Settings</span>
       </a>
-      <a routerLink="notifications" class="dropdown-item">
+      <a class="dropdown-item">
         <i class="fas fa-bell"></i>
         <span>Notifications</span>
       </a>
